# Paired-replacement-algorithm

./: .gitignore  CLAUDE.md  README.md  __init__.py  arxiv_paper.fdb_latexmk  arxiv_paper.fls  arxiv_paper.tex  install_dev.py  pyproject.toml  setup.py
docs/: algorithm_pseudocode.md  benchmarks_results.md  installation.md  paper_cpu_ieee.md  project_structure.md  real_world_impact.md  steps.md
paired_replacement/: __init__.py
paired_replacement/benchmarks/: README.md  __init__.py
paired_replacement/benchmarks/data/: merged_report.md  merged_results_timing_ci.csv  report.md  results_e2e_torch.csv  results_e2e_torch_clean.csv  results_microbench.csv  results_microbench_torch.csv  results_microbench_torch_old.csv  results_sweep.csv  results_timing_ci.csv
paired_replacement/benchmarks/scripts/: __init__.py  generate_report.py  merge_multi_cpu.py  parse_xctrace_csv.py  plot_e2e.py  plot_microbench.py  plot_microbench_overlays.py  plot_perf.py  plot_sweep.py  run_autotune.py  run_e2e_moe.py  run_e2e_sweep.py  run_e2e_torch.py  run_microbench.py  run_microbench_torch.py  run_multi_cpu_suite.py  run_perf_torch.py  run_sweep.py  run_timing_ci.py  run_xctrace.py  sysinfo.py
paired_replacement/src/: __init__.py
paired_replacement/src/cpp/: weight_cache_binding.cpp
paired_replacement/src/cpp/paired/: weight_cache.h
paired_replacement/src/python/: __init__.py  paired_cache.py
